--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -371,7 +371,8 @@
                         android:weightSum="3">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left"
                             android:layout_margin="@dimen/activity_medium_margin"
@@ -403,7 +404,8 @@
                         android:weightSum="3">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left"
                             android:layout_margin="@dimen/activity_medium_margin"
