--- a/app/src/main/res/layout/main2_activity.xml
+++ b/app/src/main/res/layout/main2_activity.xml
@@ -8,7 +8,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_main2"
+        layout="@layout/main2_app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
