--- a/app/src/main/res/layout/main2_content.xml
+++ b/app/src/main/res/layout/main2_content.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Activities.Main2Activity"
-    tools:showIn="@layout/app_bar_main2">
+    tools:showIn="@layout/main2_app_bar">
 
     <org.osmdroid.views.MapView
         android:id="@+id/mapView"
