--- a/app/src/main/res/layout/take_other_photo_activity.xml
+++ b/app/src/main/res/layout/take_other_photo_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".Activities.PaperActivity">
+    tools:context=".Activities.TakeOtherPhotoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
